--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -4,27 +4,26 @@
 <head>
   <meta charset="utf-8" />
   <title>Your Very Handsome Website</title>
-  <meta name="description" content="" />
+  <meta name="description" content="Menjual Furniture" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta property="og:title" content="" />
-  <meta property="og:type" content="" />
-  <meta property="og:url" content="" />
-  <meta property="og:image" content="" />
+  <meta property="og:title" content="Luxspace - Saingan IKEA" />
+  <meta property="og:description" content="Menjual Furniture" />
+  <meta property="og:url" content="https://luxspace.com" />
+  <meta property="og:image" content="https://luxspace.com/images/content/preview-homepage.jpg" />
 
   <link rel="manifest" href="site.webmanifest" />
-  <link rel="apple-touch-icon" href="images/content/favicon.png" />
+  <link rel="apple-touch-icon" href="images/favicon.ico" />
   <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="./css/main.css" />
-  <link rel="icon" href="images/content/favicon.ico" />
+  <link rel="icon" href="images/favicon.ico" />
 
   <meta name="theme-color" content="#000" />
 </head>
 
 <body>
   <!-- Add your site or application content here -->
-
   <!-- Start: Header -->
   <header class="absolute w-full z-50 px-4">
     <div class="container mx-auto py-10">
@@ -94,6 +93,50 @@
     </div>
   </header>
   <!-- End: Header -->
+
+  <!-- Start: Section Hero -->
+  <section class="flex items-center hero">
+    <!-- Start: Section Hero | Left Side -->
+    <div
+      class="w-full absolute z-20 inset-0 md:relative md:w-1/2 text-center flex flex-col justify-center hero-caption">
+      <h1 class="text-3xl md:text-5xl leading-tight font-semibold">
+        The Room <br class="" /> You've Dreaming
+      </h1>
+      <h2 class="px-8 text-base md:px-0 md:text-lg my-6 tracking-wide">
+        Kami menyediakan furniture berkelas yang <br class="hidden lg:block" /> membuat ruangan terasa homey
+      </h2>
+      <div>
+        <a href="#browse-the-room"
+          class="bg-pink-400 text-black hover:bg-black hover:text-pink-400 rounded-full px-8 py-3 mt-4 inline-block flex-none transition duration-200">
+          Explore Now
+        </a>
+      </div>
+    </div>
+    <!-- End: Section Hero | Left Side -->
+    <!-- Start: Section Hero | Right Side -->
+    <div class="w-full inset-0 md:relative md:w-1/2">
+      <div class="relative hero-image">
+        <div class="overlay inset-0 bg-black opacity-30 z-10">
+
+        </div>
+        <div class="overlay right-0 bottom-0 md:inset-0">
+          <button class="video hero-cta focus:outline-none z-30 modal-trigger" data-content='<div class="w-screen pb-56 md:w-88 relative z-50">
+              <div class="absolute w-full h-full">
+                <iframe width="100%" height="100%" src="https://www.youtube.com/embed/UudV1VdFtuQ"
+                  title="YouTube video player" frameborder="0"
+                  allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen></iframe>
+              </div>
+            </div>'>
+          </button>
+        </div>
+        <img class="absolute inset-0 md:relative w-full h-full object-cover object-center"
+          src="images/content/image-hero.jpg" alt="House with sofa and some plants">
+      </div>
+    </div>
+    <!-- End: Section Hero | Right Side -->
+  </section>
+  <!-- End: Section Hero -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
