--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -34,8 +34,8 @@
         <div class="w-full"></div>
         <!-- Start: menu hamburger wrapper -->
         <div class="w-auto">
-          <ul
-            class="fixed bg-white inset-0 flex-col invisible items-center justify-center opacity-0 md:visible md:flex-row md:bg-transparent md:relative md:opacity-100 md:flex">
+          <ul id="menu"
+            class="fixed bg-white inset-0 flex flex-col invisible items-center justify-center opacity-0 md:visible md:flex-row md:bg-transparent md:relative md:opacity-100">
             <li class="mx-3 py-6 md:py-0">
               <a href="#" class="text-black hover:text-white hover:underline">Showcase</a>
             </li>
@@ -56,7 +56,7 @@
           <ul class="flex items-center">
             <li class="ml-6 block md:hidden">
               <button id="menu-toggler"
-                class="relative flex z-50 items-center justify-center w-8 h-8 text-black hover:text-white focus:outline-none">
+                class="relative flex z-50 items-center justify-center w-8 h-8 text-black focus:outline-none">
                 <svg class="fill-current" width="18" height="17" viewBox="0 0 18 17" fill="none"
                   xmlns="http://www.w3.org/2000/svg">
                   <path
