--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -43,7 +43,7 @@
               <a href="#" class="text-black hover:text-white hover:underline">Catalog</a>
             </li>
             <li class="mx-3 py-6 md:py-0">
-              <a href="#" class="text-black hover:text-white hover:underline">Delevery</a>
+              <a href="#" class="text-black hover:text-white hover:underline">Delivery</a>
             </li>
             <li class="mx-3 py-6 md:py-0">
               <a href="#" class="text-black hover:text-white hover:underline">Rewards</a>
@@ -137,6 +137,85 @@
     <!-- End: Section Hero | Right Side -->
   </section>
   <!-- End: Section Hero -->
+
+  <!-- Start: Browse The Room -->
+  <section class="flex bg-gray-100 py-16 px-4" id="browse-the-room">
+    <div class="container mx-auto">
+      <div class="flex flex-start mb-4">
+        <h3 class="text-2xl capitalize font-semibold">
+          browse the room <br class="" />that we design for you
+        </h3>
+      </div>
+      <div class="grid grid-rows-2 grid-cols-9 gap-4">
+        <!-- Start: item browse the room 1 -->
+        <div class="relative col-span-9 row-span-1 md:col-span-4 card" style="height: 180px;">
+          <div class="card-shadow rounded-xl">
+            <img src="./images/content/image-catalog-1.jpg" alt=""
+              class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+          </div>
+          <div class="overlay left-0 top-0 bottom-0 flex justify-center flex-col pl-48 md:pl-72">
+            <h5 class="text-lg font-semibold">Living Room</h5>
+            <span class="">18.309 items</span>
+          </div>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item browse the room 1 -->
+
+        <!-- Start: item browse the room 2 -->
+        <div class="relative col-span-9 row-span-1 md:col-span-2 md:row-span-2 card">
+          <div class="card-shadow rounded-xl">
+            <img src="./images/content/image-catalog-4.jpg" alt=""
+              class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+          </div>
+          <div
+            class="overlay inset-0 md:bottom-auto flex justify-center md:items-center flex-col pl-48 md:pl-0 pt-0 md:pt-12">
+            <h5 class="text-lg font-semibold">Decoration</h5>
+            <span class="">77.392 items</span>
+          </div>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item browse the room 2 -->
+
+        <!-- Start: item browse the room 3 -->
+        <div class="relative col-span-9 row-span-1 md:col-span-3 md:row-span-2 card">
+          <div class="card-shadow rounded-xl">
+            <img src="./images/content/image-catalog-3.jpg" alt=""
+              class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+          </div>
+          <div
+            class="overlay inset-0 md:bottom-auto flex justify-center md:items-center flex-col pl-48 md:pl-0 pt-0 md:pt-12">
+            <h5 class="text-lg font-semibold">Bed Room</h5>
+            <span class="">22.094 items</span>
+          </div>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item browse the room 3 -->
+
+        <!-- Start: item browse the room 4 -->
+        <div class="relative col-span-9 row-span-1 md:col-span-4 card">
+          <div class="card-shadow rounded-xl">
+            <img src="./images/content/image-catalog-2.jpg" alt=""
+              class="w-full h-full object-cover overlay overflow-hidden rounded-xl">
+          </div>
+          <div class="overlay left-0 top-0 bottom-0 flex justify-center flex-col pl-48 md:pl-72">
+            <h5 class="text-lg font-semibold">Children Room</h5>
+            <span class="">807 items</span>
+          </div>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item browse the room 4 -->
+      </div>
+    </div>
+  </section>
+  <!-- End: Browse The Room -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
