--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -217,6 +217,30 @@
   </section>
   <!-- End: Browse The Room -->
 
+  <!-- Start: Just Arrived -->
+  <section class="flex flex-col py-16">
+    <div class="container mx-auto mb-4">
+      <div class="flex justify-center text-center mb-4">
+        <h3 class="text-2xl capitalize font-semibold">
+          just arrived <br />
+          this summer for you
+        </h3>
+      </div>
+    </div>
+    <div class="overvlow-x-hidden px-4" id="carousel">
+      <div class="container mx-auto"></div>
+      <div class="flex -mx-4 flex-row relative">
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="" alt="">
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <!-- End: Just Arrived -->
+  <div class="min-h-screen"></div>
+
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
     window.ga = function () {
