--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -227,14 +227,87 @@
         </h3>
       </div>
     </div>
-    <div class="overvlow-x-hidden px-4" id="carousel">
+    <div class="overflow-x-hidden px-4" id="carousel">
       <div class="container mx-auto"></div>
       <div class="flex -mx-4 flex-row relative">
+        <!-- Start: item carousel 1 -->
         <div class="px-4 relative card">
           <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
-            <img src="" alt="">
+            <img src="./images/content/img-carousel-1.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
           </div>
+          <h5 class="text-lg font-semibold mt-4">Cangkir Mauttie</h5>
+          <span class="">IDR 89.300</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
         </div>
+        <!-- End: item carousel 1 -->
+        <!-- Start: item carousel 2 -->
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="./images/content/img-carousel-2.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
+          </div>
+          <h5 class="text-lg font-semibold mt-4">Bankyu Minimax</h5>
+          <span class="">IDR 67.000</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item carousel 2 -->
+        <!-- Start: item carousel 3 -->
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="./images/content/img-carousel-3.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
+          </div>
+          <h5 class="text-lg font-semibold mt-4">Buku Sidu Edition</h5>
+          <span class="">IDR 12.000.000</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item carousel 3 -->
+        <!-- Start: item carousel 4 -->
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="./images/content/img-carousel-4.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
+          </div>
+          <h5 class="text-lg font-semibold mt-4">Watch Notes X</h5>
+          <span class="">IDR 7.600.999</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item carousel 4 -->
+        <!-- Start: item carousel 5 -->
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="./images/content/img-carousel-5.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
+          </div>
+          <h5 class="text-lg font-semibold mt-4">Racking Plants</h5>
+          <span class="">IDR 159.300</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item carousel 5 -->
+        <!-- Start: item carousel 3 -->
+        <div class="px-4 relative card">
+          <div class="rounded-xl overflow-hidden card-shadow" style="width: 297px; height: 386px">
+            <img src="./images/content/img-carousel-3.jpg" alt="cangkir"
+              class="w-full h-full object-cover object-center">
+          </div>
+          <h5 class="text-lg font-semibold mt-4">Buku Sidu Edition</h5>
+          <span class="">IDR 12.000.000</span>
+          <a href="details.html" class="stretched-link">
+            <!-- fake children -->
+          </a>
+        </div>
+        <!-- End: item carousel 3 -->
       </div>
     </div>
   </section>
