add : carousel logic

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -238,7 +238,7 @@
           </div>
           <h5 class="text-lg font-semibold mt-4">Cangkir Mauttie</h5>
           <span class="">IDR 89.300</span>
-          <a href="details.html" class="stretched-link">
+          <a href="#" class="stretched-link">
             <!-- fake children -->
           </a>
         </div>
