add : init footer section

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -29,7 +29,7 @@
     <div class="container mx-auto py-10">
       <div class="flex flex-stretch items-center">
         <div class="w-56 flex items-center">
-          <img src="images/design/logo.svg" alt="Luxspace - Adalah sebuah website yang menjual barang-barang bagus">
+          <img src="images/design/logo.svg" alt="Luxspace - Adalah sebuah website yang menjual barang-barang bagus" />
         </div>
         <div class="w-full"></div>
         <!-- Start: menu hamburger wrapper -->
@@ -312,7 +312,93 @@
     </div>
   </section>
   <!-- End: Just Arrived -->
-  <div class="min-h-screen"></div>
+
+  <!-- Start: Clients -->
+  <section class="container mx-auto py-8">
+    <div class="flex justify-center flex-wrap">
+      <div class="w-full flex-auto md:w-auto md:flex-initial px-4 md:px-6 my-4 md:my-0">
+        <img src="./images/content/logo-adobe.png" alt="logo adobe" class="mx-auto" />
+      </div>
+      <div class="w-full flex-auto md:w-auto md:flex-initial px-4 md:px-6 my-4 md:my-0">
+        <img src="./images/content/logo-ikea.png" alt="logo ikea" class="mx-auto" />
+      </div>
+      <div class="w-full flex-auto md:w-auto md:flex-initial px-4 md:px-6 my-4 md:my-0">
+        <img src="./images/content/logo-herman-miller.png" alt="logo herman miller" class="mx-auto" />
+      </div>
+      <div class="w-full flex-auto md:w-auto md:flex-initial px-4 md:px-6 my-4 md:my-0">
+        <img src="./images/content/logo-miele.png" alt="logo miele" class="mx-auto" />
+      </div>
+    </div>
+  </section>
+  <!-- End: Clients -->
+
+  <!-- Start: Footer -->
+  <section class="">
+    <div class="border-t border-b border-gray-200 py-12 mt-16 px-4">
+      <div class="flex justify-center mb-8">
+        <img src="images/design/logo.svg" alt="Luxspace - Adalah sebuah website yang menjual barang-barang bagus" />
+      </div>
+      <aside class="container mx-auto">
+        <div class="flex flex-wrap space-x-4 justify-center">
+          <!-- Start: Item aside menu 1-->
+          <div class="w-full md:w-2/12 mb-4 md:mb-0 accordion">
+            <h5 class="text-lg font-semibold mb-2 relative">
+              Overview
+            </h5>
+            <ul class="h-0 invisible md:h-auto md:visible overflow-hidden">
+              <li>
+                <a href="" class="hover:underline py-1 block">Shipping</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">Refund</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">Promotion</a>
+              </li>
+            </ul>
+          </div>
+          <!-- End: Item aside menu 1-->
+          <!-- Start: Item aside menu 2-->
+          <div class="w-full md:w-2/12 mb-4 md:mb-0 accordion">
+            <h5 class="text-lg font-semibold mb-2 relative">
+              Company
+            </h5>
+            <ul class="h-0 invisible md:h-auto md:visible overflow-hidden">
+              <li>
+                <a href="" class="hover:underline py-1 block">About</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">Career</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+          <!-- End: Item aside menu 2-->
+          <!-- Start: Item aside menu 3-->
+          <div class="w-full md:w-2/12 mb-4 md:mb-0 accordion">
+            <h5 class="text-lg font-semibold mb-2 relative">
+              Explore
+            </h5>
+            <ul class="h-0 invisible md:h-auto md:visible overflow-hidden">
+              <li>
+                <a href="" class="hover:underline py-1 block">Term & Conds</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">Privacy Policy</a>
+              </li>
+              <li>
+                <a href="" class="hover:underline py-1 block">For Developer</a>
+              </li>
+            </ul>
+          </div>
+          <!-- End: Item aside menu 3-->
+        </div>
+      </aside>
+    </div>
+  </section>
+  <!-- End: Footer -->
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
