add : init detail page

--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -25,7 +25,7 @@
 <body>
     <!-- Add your site or application content here -->
     <!-- Start: Header -->
-    <header class="absolute w-full z-50 px-4 top-0">
+    <header class="w-full z-50 px-4">
         <div class="container mx-auto py-10">
             <div class="flex flex-stretch items-center">
                 <div class="w-56 flex items-center">
@@ -120,6 +120,71 @@
         </div>
     </section>
     <!-- End: Breadcrumb -->
+
+    <!-- Start: Details -->
+    <section class="container mx-auto">
+        <div class="flex flex-wrap my-4 md:my-12">
+            <div class="w-full md:hidden px-4">
+                <h2 class="text-5xl font-semibold">
+                    Chair Thatty
+                </h2>
+                <span class="text-xl">IDR 12.000.000</span>
+            </div>
+            <div class="flex-1">
+                <div class="slider">
+                    <div class="thumbnail">
+                        <!-- Start: slideshow thumbnail item 1 -->
+                        <div class="px-2">
+                            <div class="item">
+                                <img src="../images/content/chair1.jpg" alt="chair side"
+                                    class="object-cover w-full h-full rounded-lg">
+                            </div>
+                        </div>
+                        <!-- End: slideshow thumbnail item 1 -->
+                        <!-- Start: slideshow thumbnail item 2 -->
+                        <div class="px-2">
+                            <div class="item">
+                                <img src="../images/content/chair1.jpg" alt="chair side"
+                                    class="object-cover w-full h-full rounded-lg">
+                            </div>
+                        </div>
+                        <!-- End: slideshow thumbnail item 2 -->
+                        <!-- Start: slideshow thumbnail item 3 -->
+                        <div class="px-2">
+                            <div class="item">
+                                <img src="../images/content/chair1.jpg" alt="chair side"
+                                    class="object-cover w-full h-full rounded-lg">
+                            </div>
+                        </div>
+                        <!-- End: slideshow thumbnail item 3 -->
+                        <!-- Start: slideshow thumbnail item 4 -->
+                        <div class="px-2">
+                            <div class="item">
+                                <img src="../images/content/chair1.jpg" alt="chair side"
+                                    class="object-cover w-full h-full rounded-lg">
+                            </div>
+                        </div>
+                        <!-- End: slideshow thumbnail item 4 -->
+                        <!-- Start: slideshow thumbnail item 5 -->
+                        <div class="px-2">
+                            <div class="item">
+                                <img src="../images/content/chair1.jpg" alt="chair side"
+                                    class="object-cover w-full h-full rounded-lg">
+                            </div>
+                        </div>
+                        <!-- End: slideshow thumbnail item 5 -->
+                    </div>
+                    <div class="preview">
+                        <div class="item rounded-lg h-full overflow-hidden">
+                            <img src="../images/content/chair1.jpg" alt=""
+                                class="object-cover w-full h-full rounded-lg">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End: Details -->
 
     <!-- Start: Footer Menu -->
     <section class="">
