--- a/src/css/app.css
+++ b/src/css/app.css
@@ -65,7 +65,33 @@
     }
 
     /* slideshow */
-    
+    .slider {
+        @apply flex my-4 flex-col
+    }
+
+    .slider .thumbnail {
+        @apply w-screen order-last -mx-2 overflow-auto flex pl-4
+    }
+
+    .slider .thumbnail .item {
+        @apply rounded-lg bg-gray-100 relative mb-4 cursor-pointer;
+        width: 106px;
+        height: 106px;
+    }
+
+    .slider .thumbnail .item:after{
+        content: "";
+        @apply transition duration-200 absolute inset-0 bg-black bg-opacity-0 border-2 border-black border-opacity-0 rounded-lg;
+    }
+
+    .slider .thumbnail .item.selected:after{
+        @apply bg-opacity-35 border-opacity-100 
+    }
+
+    .slider .preview {
+        @apply mb-4 px-4;
+        height: 320px
+    }
 }
 
 @screen md {
@@ -78,6 +104,19 @@
     .hero .hero-cta {
         @apply w-20 h-20 transform -translate-x-1/2 -translate-y-1/2;
         background-size: auto;
+    }
+
+    .slider {
+        @apply flex-row;
+    }
+
+    .slider .thumbnail {
+        @apply w-auto order-first block overflow-visible pl-0;
+    }
+
+    .slider .preview {
+        height: 609px;
+        width: 560px;
     }
 }
 
