add : detail page sugestion section

--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -234,9 +234,82 @@
     </section>
     <!-- End: Details -->
 
+    <!-- Start: Complete your Room -->
+    <section class="bg-gray-100 px-4 py-16">
+        <div class="container mx-auto">
+            <div class="flex flex-start mb-4">
+                <h3 class="text-2xl capitalize font-semibold">complete your room <br class="" />with what we designed
+                </h3>
+            </div>
+            <div class="flex overflow-x-auto mb-4 -mx-3">
+                <!-- Start : item 1 -->
+                <div class="px-3 w-full md:w-3/12 mb-4">
+                    <div class="rounded-xl p-4 pb-8 relative bg-white w-max">
+                        <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                            <img src="./images/content/chair-office-1.jpg" alt="chair 1"
+                                class="w-full h-full object-cover object-center">
+                        </div>
+                        <h5 class="text-large font-semibold mt-4">Office Chair 2xl</h5>
+                        <span class="">IDR 90.000</span>
+                        <a href="details.html" class="stretched-link">
+                            <!-- fake children -->
+                        </a>
+                    </div>
+                </div>
+                <!-- End : item 1 -->
+                <!-- Start : item 2 -->
+                <div class="px-3 w-full md:w-3/12 mb-4">
+                    <div class="rounded-xl p-4 pb-8 relative bg-white w-max">
+                        <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                            <img src="./images/content/chair-office-2.jpg" alt="chair 2"
+                                class="w-full h-full object-cover object-center">
+                        </div>
+                        <h5 class="text-large font-semibold mt-4">Office Chair 2xl</h5>
+                        <span class="">IDR 90.000</span>
+                        <a href="details.html" class="stretched-link">
+                            <!-- fake children -->
+                        </a>
+                    </div>
+                </div>
+                <!-- End : item 2 -->
+                <!-- Start : item 3 -->
+                <div class="px-3 w-full md:w-3/12 mb-4">
+                    <div class="rounded-xl p-4 pb-8 relative bg-white w-max">
+                        <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                            <img src="./images/content/chair-office-3.jpg" alt="chair 3"
+                                class="w-full h-full object-cover object-center">
+                        </div>
+                        <h5 class="text-large font-semibold mt-4">Office Chair 2xl</h5>
+                        <span class="">IDR 90.000</span>
+                        <a href="details.html" class="stretched-link">
+                            <!-- fake children -->
+                        </a>
+                    </div>
+                </div>
+                <!-- End : item 3 -->
+                <!-- Start : item 4 -->
+                <div class="px-3 w-full md:w-3/12 mb-4">
+                    <div class="rounded-xl p-4 pb-8 relative bg-white w-max">
+                        <div class="rounded-xl overflow-hidden card-shadow w-full h-48">
+                            <img src="./images/content/chair-office-4.jpg" alt="chair 4"
+                                class="w-full h-full object-cover object-center">
+                        </div>
+                        <h5 class="text-large font-semibold mt-4">Office Chair 2xl</h5>
+                        <span class="">IDR 90.000</span>
+                        <a href="details.html" class="stretched-link">
+                            <!-- fake children -->
+                        </a>
+                    </div>
+                </div>
+                <!-- End : item 4 -->
+            </div>
+        </div>
+    </section>
+    <!-- End: Complete your Room -->
+
     <!-- Start: Footer Menu -->
     <section class="">
-        <div class="border-t border-b border-gray-200 py-12 mt-16 px-4">
+        <div class="border-b border-gray-200 py-12 px-4">
             <div class="flex justify-center mb-8">
                 <img src="images/design/logo.svg"
                     alt="Luxspace - Adalah sebuah website yang menjual barang-barang bagus" />
