add : shopping cart table

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -125,7 +125,9 @@
                     <div class="flex flex-start mb-4 mt-8 pb-3 border-b border-gray-200 md:border-b-0">
                         <h3 class="text-2xl">Shopping Cart</h3>
                     </div>
+                    <!-- Start: Table Tittle -->
                     <div class="border-b border-gray-200 mb-4 hidden md:block">
+
                         <div class="flex flex-start items-center pb-2 -mx-4">
                             <div class="px-4 flex-none">
                                 <div class="" style="width: 90px;">
@@ -148,7 +150,107 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- End: Table Tittle -->
                     </div>
+                    <!-- Start: Table Item 1 -->
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                        <div class="px-4 flex-none">
+                            <div class="" style="width: 90px; height: 90px;">
+                                <img src="./images/content/chair-office-1.jpg" alt="chair office 1"
+                                    class="object-cover rounded-xl w-full h-full">
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-1">
+                            <div class="">
+                                <h6 class="text-semibold text-lg md:text-xl leading-8">
+                                    Saman Kakka
+                                </h6>
+                                <span class="text-small md:text-lg">Office Room</span>
+                                <h6 class="semi-bold text-base md:text-lg block md:hidden">
+                                    IDR 28.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-none md:flex-1 hidden md:block">
+                            <div class="">
+                                <h6 class="semi-bold text-base block">
+                                    IDR 28.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-2/12">
+                            <div class="text-center">
+                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End: Table Item 1 -->
+                    <!-- Start: Table Item 2 -->
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                        <div class="px-4 flex-none">
+                            <div class="" style="width: 90px; height: 90px;">
+                                <img src="./images/content/chair-office-2.jpg" alt="chair office 2"
+                                    class="object-cover rounded-xl w-full h-full">
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-1">
+                            <div class="">
+                                <h6 class="text-semibold text-lg md:text-xl leading-8">
+                                    Green Seat
+                                </h6>
+                                <span class="text-small md:text-lg">Office Room</span>
+                                <h6 class="semi-bold text-base md:text-lg block md:hidden">
+                                    IDR 12.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-none md:flex-1 hidden md:block">
+                            <div class="">
+                                <h6 class="semi-bold text-base block">
+                                    IDR 12.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-2/12">
+                            <div class="text-center">
+                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End: Table Item 2 -->
+                    <!-- Start: Table Item 3 -->
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                        <div class="px-4 flex-none">
+                            <div class="" style="width: 90px; height: 90px;">
+                                <img src="./images/content/chair-office-3.jpg" alt="chair office 3"
+                                    class="object-cover rounded-xl w-full h-full">
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-1">
+                            <div class="">
+                                <h6 class="text-semibold text-lg md:text-xl leading-8">
+                                    Pacific
+                                </h6>
+                                <span class="text-small md:text-lg">Office Room</span>
+                                <h6 class="semi-bold text-base md:text-lg block md:hidden">
+                                    IDR 88.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-auto md:w-5/12 flex-none md:flex-1 hidden md:block">
+                            <div class="">
+                                <h6 class="semi-bold text-base block">
+                                    IDR 88.000.000
+                                </h6>
+                            </div>
+                        </div>
+                        <div class="px-4 w-2/12">
+                            <div class="text-center">
+                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- End: Table Item 3-->
                 </div>
                 <!-- End: Shipping Cart -->
                 <!-- Start: Shipping Detail -->
