--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -254,7 +254,122 @@
                 </div>
                 <!-- End: Shipping Cart -->
                 <!-- Start: Shipping Detail -->
+                <div class="w-full md:px-4 md:w-4/12">
+                    <div class="bg-gray-100 px-4 py-6 md:p-8 md:rounded-3xl">
+                        <form action="success.html">
+                            <div class="flex flex-start mb-6">
+                                <h3 class="text-2xl">Shipping Details</h3>
+                            </div>
+                            <!-- Start: Input Complate Name -->
+                            <div class="flex flex-col mb-4">
+                                <label for="complate-name" class="text-sm mb-2">Complate Name</label>
+                                <input type="text" id="complate-name"
+                                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                                    placeholder="Input your name" />
+                            </div>
+                            <!-- End: Input Complate Name -->
+                            <!-- Start: Input Complate Email -->
+                            <div class="flex flex-col mb-4">
+                                <label for="email-address" class="text-sm mb-2">Email Address</label>
+                                <input type="email" id="email-address"
+                                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                                    placeholder="Input your email address" />
+                            </div>
+                            <!-- End: Input Complate Email -->
+                            <!-- Start: Input Complate Address -->
+                            <div class="flex flex-col mb-4">
+                                <label for="address" class="text-sm mb-2">Address</label>
+                                <input type="text" id="address"
+                                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                                    placeholder="Input your address" />
+                            </div>
+                            <!-- End: Input Complate Address -->
+                            <!-- Start: Input Phone number -->
+                            <div class="flex flex-col mb-4">
+                                <label for="phone-number" class="text-sm mb-2">Phone Number</label>
+                                <input type="tel" id="phone-number"
+                                    class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
+                                    placeholder="Input your phone number" />
+                            </div>
+                            <!-- End: Input Phone number -->
+                            <!-- Start: Choose Courier -->
+                            <div class="flex flex-col mb-4">
+                                <label class="text-sm mb-2">Choose courier</label>
+                                <div class="flex -mx-2 flex-wrap">
+                                    <!-- Start: Courier 1 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/courier/logo-fedex.png" alt="fedex"
+                                                class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Courier 1 -->
+                                    <!-- Start: Courier 2 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/courier/logo-dhl.png" alt="dhl"
+                                                class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Courier 2 -->
+                                </div>
+                            </div>
+                            <!-- End: Choose Courier -->
+                            <!-- Start: Choose Payment -->
+                            <div class="flex flex-col mb-4">
+                                <label class="text-sm mb-2">Choose courier</label>
+                                <div class="flex -mx-2 flex-wrap">
+                                    <!-- Start: Payment 1 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/payment/logo-midtrans.png" alt="midtrans"
+                                                class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Payment 1 -->
+                                    <!-- Start: Payment 2 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/payment/logo-mastercard.png" alt="mastercard"
+                                                class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Payment 2 -->
+                                    <!-- Start: Payment 3 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/payment/logo-bitcoin.png" alt="bitcoin"
+                                                class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Payment 3 -->
+                                    <!-- Start: Payment 4 -->
+                                    <div class="px-2 w-6/12 h-24 mb-4">
+                                        <button type="button"
+                                            class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
+                                            <img src="./images/content/payment/logo-american-express.png"
+                                                alt="american-express" class="object-contain max-h-full" />
+                                        </button>
+                                    </div>
+                                    <!-- End: Payment 4 -->
+                                </div>
+                            </div>
+                            <!-- End: Choose Payment -->
 
+                            <div class="text-center">
+                                <button type="submit"
+                                    class="bg-gray-300 text-gray-400 focus:bg-red-200 focus:outline-none w-full py-3 rounded-full text-lg focus:text-black transition-all duration-200 px-6">
+                                    Checkout Now
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
                 <!-- End: Shipping Detail -->
             </div>
         </div>
@@ -264,7 +379,7 @@
 
     <!-- Start: Footer Menu -->
     <section class="">
-        <div class="border-b border-gray-200 py-12 px-4">
+        <div class="border-b border-t border-gray-200 py-12 px-4">
             <div class="flex justify-center mb-8">
                 <img src="images/design/logo.svg"
                     alt="Luxspace - Adalah sebuah website yang menjual barang-barang bagus" />
