add : init cart logic

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -70,7 +70,7 @@
                             </button>
                         </li>
                         <li class="ml-6">
-                            <a href="cart.html"
+                            <a id="header-cart" href="cart.html"
                                 class="flex-items-center-justify-center w-8 h-8 text-black cart cart-filled">
                                 <svg class="fill-current" width="29" height="25" viewBox="0 0 29 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
@@ -121,7 +121,7 @@
         <div class="container mx-auto px-4">
             <div class="flex -mx-4 flex-wrap">
                 <!-- Start: Shipping Cart -->
-                <div class="w-full px-4 mb-4 md:w-8/12 md:mb-0">
+                <div class="w-full px-4 mb-4 md:w-8/12 md:mb-0" id="shopping-cart">
                     <div class="flex flex-start mb-4 mt-8 pb-3 border-b border-gray-200 md:border-b-0">
                         <h3 class="text-2xl">Shopping Cart</h3>
                     </div>
@@ -153,7 +153,7 @@
                         <!-- End: Table Tittle -->
                     </div>
                     <!-- Start: Table Item 1 -->
-                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4" data-row="1">
                         <div class="px-4 flex-none">
                             <div class="" style="width: 90px; height: 90px;">
                                 <img src="./images/content/chair-office-1.jpg" alt="chair office 1"
@@ -180,13 +180,14 @@
                         </div>
                         <div class="px-4 w-2/12">
                             <div class="text-center">
-                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                                <button data-delete-item="1"
+                                    class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
                             </div>
                         </div>
                     </div>
                     <!-- End: Table Item 1 -->
                     <!-- Start: Table Item 2 -->
-                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4" data-row="2">
                         <div class="px-4 flex-none">
                             <div class="" style="width: 90px; height: 90px;">
                                 <img src="./images/content/chair-office-2.jpg" alt="chair office 2"
@@ -213,13 +214,14 @@
                         </div>
                         <div class="px-4 w-2/12">
                             <div class="text-center">
-                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                                <button data-delete-item="2"
+                                    class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
                             </div>
                         </div>
                     </div>
                     <!-- End: Table Item 2 -->
                     <!-- Start: Table Item 3 -->
-                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4">
+                    <div class="flex flex-start flex-wrap items-center mb-4 -mx-4" data-row="3">
                         <div class="px-4 flex-none">
                             <div class="" style="width: 90px; height: 90px;">
                                 <img src="./images/content/chair-office-3.jpg" alt="chair office 3"
@@ -246,7 +248,8 @@
                         </div>
                         <div class="px-4 w-2/12">
                             <div class="text-center">
-                                <button class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
+                                <button data-delete-item="3"
+                                    class="text-red-600 border-none focus:outline-none px-3 py-1">X</button>
                             </div>
                         </div>
                     </div>
