add : input logic shipping form

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -150,8 +150,15 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- End: Table Tittle -->
                     </div>
+                    <!-- End: Table Tittle -->
+
+                    <!-- Start: Cart Empty Wrapper -->
+                    <p id="cart-empty" class="hidden text-center py-8">
+                        Ooops... Cart is empty <a href="details.html" class="underline">Shop Now!</a>
+                    </p>
+                    <!-- End: Cart Empty Wrapper -->
+
                     <!-- Start: Table Item 1 -->
                     <div class="flex flex-start flex-wrap items-center mb-4 -mx-4" data-row="1">
                         <div class="px-4 flex-none">
@@ -257,7 +264,7 @@
                 </div>
                 <!-- End: Shipping Cart -->
                 <!-- Start: Shipping Detail -->
-                <div class="w-full md:px-4 md:w-4/12">
+                <div class="w-full md:px-4 md:w-4/12" id="shipping-detail">
                     <div class="bg-gray-100 px-4 py-6 md:p-8 md:rounded-3xl">
                         <form action="success.html">
                             <div class="flex flex-start mb-6">
@@ -266,7 +273,7 @@
                             <!-- Start: Input Complate Name -->
                             <div class="flex flex-col mb-4">
                                 <label for="complate-name" class="text-sm mb-2">Complate Name</label>
-                                <input type="text" id="complate-name"
+                                <input data-input type="text" id="complate-name"
                                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
                                     placeholder="Input your name" />
                             </div>
@@ -274,7 +281,7 @@
                             <!-- Start: Input Complate Email -->
                             <div class="flex flex-col mb-4">
                                 <label for="email-address" class="text-sm mb-2">Email Address</label>
-                                <input type="email" id="email-address"
+                                <input data-input type="email" id="email-address"
                                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
                                     placeholder="Input your email address" />
                             </div>
@@ -282,7 +289,7 @@
                             <!-- Start: Input Complate Address -->
                             <div class="flex flex-col mb-4">
                                 <label for="address" class="text-sm mb-2">Address</label>
-                                <input type="text" id="address"
+                                <input data-input type="text" id="address"
                                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
                                     placeholder="Input your address" />
                             </div>
@@ -290,7 +297,7 @@
                             <!-- Start: Input Phone number -->
                             <div class="flex flex-col mb-4">
                                 <label for="phone-number" class="text-sm mb-2">Phone Number</label>
-                                <input type="tel" id="phone-number"
+                                <input data-input type="tel" id="phone-number"
                                     class="border border-gray-200 rounded-lg px-4 py-2 bg-white text-sm focus:border-blue-200 focus:outline-none"
                                     placeholder="Input your phone number" />
                             </div>
@@ -301,7 +308,7 @@
                                 <div class="flex -mx-2 flex-wrap">
                                     <!-- Start: Courier 1 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="fedex" data-name="courier" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/courier/logo-fedex.png" alt="fedex"
                                                 class="object-contain max-h-full" />
@@ -310,7 +317,7 @@
                                     <!-- End: Courier 1 -->
                                     <!-- Start: Courier 2 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="dhl" data-name="courier" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/courier/logo-dhl.png" alt="dhl"
                                                 class="object-contain max-h-full" />
@@ -326,7 +333,7 @@
                                 <div class="flex -mx-2 flex-wrap">
                                     <!-- Start: Payment 1 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="midtrans" data-name="payment" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/payment/logo-midtrans.png" alt="midtrans"
                                                 class="object-contain max-h-full" />
@@ -335,7 +342,7 @@
                                     <!-- End: Payment 1 -->
                                     <!-- Start: Payment 2 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="mastercard" data-name="payment" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/payment/logo-mastercard.png" alt="mastercard"
                                                 class="object-contain max-h-full" />
@@ -344,7 +351,7 @@
                                     <!-- End: Payment 2 -->
                                     <!-- Start: Payment 3 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="bitcoin" data-name="payment" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/payment/logo-bitcoin.png" alt="bitcoin"
                                                 class="object-contain max-h-full" />
@@ -353,7 +360,7 @@
                                     <!-- End: Payment 3 -->
                                     <!-- Start: Payment 4 -->
                                     <div class="px-2 w-6/12 h-24 mb-4">
-                                        <button type="button"
+                                        <button data-value="american-express" data-name="payment" type="button"
                                             class="border-2 boder-gray-200 focus:outline-none focus:border-red-100 flex items-center justify-center rounded-xl bg-white w-full h-full">
                                             <img src="./images/content/payment/logo-american-express.png"
                                                 alt="american-express" class="object-contain max-h-full" />
@@ -365,8 +372,8 @@
                             <!-- End: Choose Payment -->
 
                             <div class="text-center">
-                                <button type="submit"
-                                    class="bg-gray-300 text-gray-400 focus:bg-red-200 focus:outline-none w-full py-3 rounded-full text-lg focus:text-black transition-all duration-200 px-6">
+                                <button type="submit" disabled
+                                    class="bg-pink-400 text-black focus:bg-black focus:outline-none w-full py-3 rounded-full text-lg focus:text-pink-400 transition-all duration-200 px-6">
                                     Checkout Now
                                 </button>
                             </div>
