--- a/src/templates/details.html
+++ b/src/templates/details.html
@@ -70,7 +70,7 @@
                             </button>
                         </li>
                         <li class="ml-6">
-                            <a href="cart.html"
+                            <a id="header-cart" href="cart.html"
                                 class="flex-items-center-justify-center w-8 h-8 text-black cart cart-filled">
                                 <svg class="fill-current" width="29" height="25" viewBox="0 0 29 25" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
